more innovation multistep form theming

--- a/public/sites/all/themes/gesso/sass/partials/components/_autocomplete.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_autocomplete.scss
@@ -5,14 +5,14 @@ $icon-horizontal-offset: em(8px, $form-text-size);
 $icon-vertical-offset: 12px;
 $icon-throbbing-vertical-offset: -47px;
 
-#autocomplete { 
-  border: 1px solid $form-border-color; 
+#autocomplete {
+  border: 1px solid $form-border-color;
   overflow: hidden;
   position: absolute;
   z-index: 100;
 
   ul {
-    list-style: none; 
+    list-style: none;
     margin: 0;
     padding: 0;
   }
@@ -20,7 +20,7 @@ $icon-throbbing-vertical-offset: -47px;
   li {
     background: #fff;
     color: #000;
-    cursor: default;
+    cursor: pointer;
     margin: 0;
     padding: 0.25em;
     white-space: pre;
@@ -29,42 +29,45 @@ $icon-throbbing-vertical-offset: -47px;
       background: $selection-background;
       color: $selection-foreground;
     }
+    &:before {
+      display: none !important; // override bullets from _html-elements.scss
+    }
   }
 }
 
 input.form-autocomplete {
   background-image: url(../images/bg/throbber.gif);
-  background-position: right $icon-horizontal-offset top $icon-vertical-offset; // LTR
+  background-position: 99% $icon-horizontal-offset 0 $icon-vertical-offset; // LTR
   background-repeat: no-repeat;
   padding-right: em(30px, $form-text-size); // LTR
 
   [dir="rtl"] & {
-    background-position: left $icon-horizontal-offset top $icon-vertical-offset;
+    background-position: 1% $icon-horizontal-offset 0 $icon-vertical-offset;
     padding-left: em(30px, $form-text-size);
     padding-right: em(10px, $form-text-size);
   }
 
   @if support-legacy-browser('ie', '6', '8') {
-    background-position: 100% $icon-vertical-offset; // LTR
+    background-position: 99% $icon-vertical-offset; // LTR
 
     [dir="rtl"] & {
-      background-position: 0 $icon-vertical-offset;
+      background-position: 1% $icon-vertical-offset;
     }
   }
 }
 
 input.throbbing {
-  background-position: right $icon-horizontal-offset top $icon-throbbing-vertical-offset; // LTR
+  background-position: 99% $icon-horizontal-offset 0 $icon-throbbing-vertical-offset; // LTR
 
   [dir="rtl"] & {
-    background-position: left $icon-horizontal-offset top $icon-throbbing-vertical-offset;
+    background-position: 1% $icon-horizontal-offset 0 $icon-throbbing-vertical-offset;
   }
 
   @if support-legacy-browser('ie', '6', '8') {
-    background-position: 100% $icon-throbbing-vertical-offset; // LTR
+    background-position: 99% $icon-throbbing-vertical-offset; // LTR
 
     [dir="rtl"] & {
-      background-position: 0 $icon-throbbing-vertical-offset;
+      background-position: 1% $icon-throbbing-vertical-offset;
     }
   }
 }
