--- a/public/sites/all/themes/gesso/sass/partials/components/_multistep.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_multistep.scss
@@ -9,11 +9,16 @@
 
 .multistep-description {
   margin: 0 0 4em;
+  padding-left: 25px;
+  position: relative;
   &:before {
-    @include image-replace(20px,20px);
+    @include image-replace(18px,18px);
     @include svg-background(icon-help);
-    background-size: 20px 20px;
+    background-size: 18px 18px;
     display: block;
     content: "";
+    left: 0;
+    position: absolute;
+    top: 5px;
   }
 }
