--- a/public/sites/all/themes/gesso_longform/sass/partials/base/_normalize.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/base/_normalize.scss
@@ -47,6 +47,9 @@ template {
   select,
   textarea {
     font-family: $base-font-family;
+    .font-family-lato & {
+      font-family: $lato-font-family;
+    }
   }
 }
 
