--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_views-widget.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_views-widget.scss
@@ -21,5 +21,8 @@ $bp-inline-widgets: 300px, 'no-query' true;
 .views-widget__label {
   display: block;
   font-family: $header-font-family;
+  .font-family-lato & {
+    font-family: $lato-font-family;
+  }
   font-size: $font-size-md;
 }
