--- a/public/sites/all/themes/gesso_longform/sass/partials/global/extendables/_button.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/global/extendables/_button.scss
@@ -9,6 +9,9 @@
   cursor: pointer;
   display: inline-block;
   font-family: $base-font-family;
+  .font-family-lato & {
+    font-family: $lato-font-family;
+  }
   font-size: $font-size;
   font-weight: normal;
   line-height: $base-line-height;
@@ -156,7 +159,7 @@
     height: 22px;
     top: 8px;
     width: 22px;
-  } 
+  }
 }
 
 %button--flag {
@@ -172,7 +175,7 @@
     opacity: 0.65;
     top: 9px;
     width: 19px;
-  } 
+  }
   &:hover, &:focus {
     background-color: #f1f1f1;
     border-color: #000;
