--- a/public/sites/all/themes/gesso_longform/sass/partials/global/variables/_typography.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/global/variables/_typography.scss
@@ -2,8 +2,9 @@
 // Typography variables
 // http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#variables_
 
-$base-font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: Arial, sans-serif;
 $header-font-family: $base-font-family;
+$lato-font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
 $monospace-font-family: Consolas, "Lucida Console", "Liberation Mono", "Courier New", monospace, sans-serif;
 $base-line-height: 1.625;
 $base-font-size: 16px;
@@ -25,4 +26,4 @@ $button-font-family: $base-font-family;
 $form-text-size: $font-size-normal;
 
 // Mobile Menu
-$mobile-menu-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$mobile-menu-font-family: Arial, sans-serif;
