--- a/public/sites/all/themes/gesso/sass/partials/components/_multistep.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_multistep.scss
@@ -21,4 +21,12 @@
     position: absolute;
     top: 5px;
   }
+  .pane--multistep-progress & {
+    font-size: em($font-size-md);
+    font-style: italic;
+    hyphens: none;
+    line-height: 1.4;
+    margin-top: 1em;
+    padding-bottom: 0.5em;
+  }
 }
