--- a/public/sites/all/themes/gesso/sass/partials/components/_form-item.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/_form-item.scss
@@ -18,8 +18,6 @@
   .description,
   .form-item__description {
     font-size: em($font-size-md);
-    //color: $secondary-text-color;
-    font-size: em($font-size-md);
     font-style: italic;
     hyphens: none;
     line-height: 1.4;
@@ -155,6 +153,24 @@
       left: 0;
       position: absolute;
       top: 10px;
+    }
+  }
+  .date-padding {
+    position: relative;
+    z-index: 2;
+    & + .form-item__description { // date/deadline fields
+      clear: both;
+      padding-left: 0;
+      position: relative;
+      z-index: 1;
+      @include breakpoint(700px, $no-query: true) {
+        clear: none;
+        left: 10px;
+        top: 10px;
+      }
+      &:before {
+        display: none;
+      }
     }
   }
   .filter-wrapper {
