[GIE-967] Changed form item classes to SMACSS syntax.

--- a/public/sites/all/themes/gesso/sass/partials/components/block/_block--gie-homepage-welcome-login.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/block/_block--gie-homepage-welcome-login.scss
@@ -12,8 +12,8 @@ $input-height: 30px;
     }
   }
 
-  .form-item-name,
-  .form-item-pass {
+  .form-item--name,
+  .form-item--pass {
     float: left;
     width: 35%;
     margin: 0 6px 5px 0;
