--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_long-form-enhanced-text.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_long-form-enhanced-text.scss
@@ -27,26 +27,54 @@ $image-height: 700px;
   }
   max-height: $image-height;
   overflow: hidden;
-  //padding: 20px;
   position: relative;
   width: 100%;
 
-  &.center-justified p {
+  &.center-justified {
     text-align: center;
   }
-  p {
-    color: #fff;
-    font-size: em(20px);
 
-    @include breakpoint(600px) {
-      font-size: em(28px);
-    }
-    @include breakpoint(900px, $no-query: true) {
-      font-size: em(42px);
-    }
-    line-height: 1.3;
+  .field--paragraph-text {
+    display: table;
     margin: 0 auto;
     max-width: 1200px;
-    padding: 5% 2%;
+    width: 100%;
+    .field-items {
+      display: table-row;
+      width: 100%;
+      .field-item {
+        color: #fff;
+        display: table-cell;
+        font-size: em(20px);
+        @include breakpoint(600px) {
+          font-size: em(28px);
+        }
+        @include breakpoint(900px, $no-query: true) {
+          font-size: em(42px);
+        }
+        height: $image-height * 0.5;
+        @include breakpoint($image-width * 0.6) {
+          height: $image-height * 0.6;
+        }
+        @include breakpoint($image-width * 0.7) {
+          height: $image-height * 0.7
+        }
+        @include breakpoint($image-width * 0.8) {
+          height: $image-height * 0.8;
+        }
+        @include breakpoint($image-width * 0.9) {
+          height: $image-height * 0.9;
+        }
+        @include breakpoint($image-width, $no-query: true) {
+          height: $image-height;
+        }
+        line-height: 1.3;
+        vertical-align: middle;
+        width: 100%;
+        p {
+          margin: 0.25em 0;
+        }
+      }
+    }
   }
 }
