updated markup in enhanced text

--- a/public/sites/all/themes/gesso_longform/sass/partials/components/_enhanced-text.scss
+++ b/public/sites/all/themes/gesso_longform/sass/partials/components/_enhanced-text.scss
@@ -4,11 +4,12 @@
 $image-width: 1600px;
 $image-height: 700px;
 
-.long-form-enhanced-text {
+.enhanced-text {
   background-color: #003359;
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
+  margin: 2em 0;
   min-height: $image-height * 0.5;
   @include breakpoint($image-width * 0.6) {
     min-height: $image-height * 0.6;
@@ -34,15 +35,15 @@ $image-height: 700px;
     text-align: center;
   }
 
-  .field--paragraph-text {
+  .enhanced-text__wrapper {
     display: table;
-    margin: 0 auto;
-    max-width: 1200px;
+    //margin: 0 auto;
+    padding: 0 15%;
     width: 100%;
-    .field-items {
+    .enhanced-text__inner {
       display: table-row;
       width: 100%;
-      .field-item {
+      .enhanced-text__text {
         color: #fff;
         display: table-cell;
         font-size: em(20px);
