--- a/public/sites/all/themes/gesso/sass/partials/components/nav/_block--system-user-menu.scss
+++ b/public/sites/all/themes/gesso/sass/partials/components/nav/_block--system-user-menu.scss
@@ -16,5 +16,21 @@
         color: #fff;
       }
     }
+
+    .nav__link--language {
+      padding-left: 30px;
+      position: relative;
+
+      &:before {
+        @include svg-background(globe-small);
+        content: "";
+        display: block;
+        height: 24px;
+        left: 0;
+        position: absolute;
+        width: 24px;
+        top: -5px;
+      }
+    }
   }
 }
